2004-06-22 18:26  sisoft

	* qico.conf.sample, src/config.c, src/flagexp.y, src/flaglex.l,
	  src/perl.c, src/qconf.x, src/tools.h, src/x2c.awk, stuff/test.pl:

	fix parse short time expressions, such as 'time 1-2'.
	perl: add function qexpr(string) - test qico expression.
	perl: speedup execute and support for END perl blocks.

2004-06-22 12:28  sisoft

	* src/: config.c, flagexp.y, perl.c, qconf.x, tty.c, tty.h:

	check for some keywords not placed inside if-expressions.
	fix chat with modem.

2004-06-21 01:34  sisoft

	* src/flagexp.y:

	fix compiling.

2004-06-21 01:30  sisoft

	* autogen.sh, src/flagexp.y, src/flaglex.l:

	fix pasring solid expressions.

2004-06-20 22:50  sisoft

	* autogen.sh, src/perl.c:

	perl: fix error, if 'perlfile' undefined or not exist.

2004-06-20 02:29  sisoft

	* Changes, Makefile.am, README, configure.in, src/main.c,
	  src/modem.c, src/tty.c, src/tty.h:

	fix timeouts.

2004-06-17 00:24  sisoft

	* src/binkp.c, src/mailer.h, src/perl.c, src/protfm.c,
	  src/session.c, stuff/test.pl:

	perl: fix on_session and implement on_recv/end_recv/on_send/end_send hooks.

2004-06-16 10:22  sisoft

	* debian/copyright, src/mailer.h, src/perl.c, src/session.c,
	  stuff/test.pl:

	perl: fix compiling, implement end_session() hook.

2004-06-16 07:42  sisoft

	* Changes, INSTALL, qico.conf.sample, src/binkp.c, src/call.c,
	  src/daemon.c, src/ftn.h, src/mailer.h, src/perl.c, src/session.c,
	  stuff/test.pl:

	some perl-related changes.

2004-06-15 00:29  sisoft

	* Changes, src/flaglex.l, src/session.c:

	fix compile with old flex.
	fix kill files from *.hlo and *.hut, when holdout=yes.

2004-06-13 21:05  sisoft

	* Changes, debian/changelog, debian/examples, debian/inetd.conf,
	  debian/init.d, debian/rules, debian/services, src/freq.c,
	  stuff/Makefile.am, stuff/freebsd/pkg-plist:

	fix freqs: do not include path in outgoing filenames.
	fix debian packages install.
	distrubute stuff/test.pl.

2004-06-12 00:30  sisoft
