@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-23 21:56";
+char cvsdate[]="2004-06-24 13:50";
